Agrego el js que faltaba en una vista.

--- a/tallerwebi-base/src/main/webapp/WEB-INF/views/thymeleaf/editar-informacion.html
+++ b/tallerwebi-base/src/main/webapp/WEB-INF/views/thymeleaf/editar-informacion.html
@@ -90,5 +90,6 @@
             </form>
         </section>
     </main>
+    <script type="module" th:src="@{js/tema.js}"></script>
 </body>
 </html>
