--- a/tallerwebi-base/src/main/webapp/WEB-INF/views/thymeleaf/herramientas-IA.html
+++ b/tallerwebi-base/src/main/webapp/WEB-INF/views/thymeleaf/herramientas-IA.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Herramientas IA - UNINET</title>
+    <title>Herramientas IA</title>
     <link rel="icon" th:href="@{/imagenes/isologo.png}" type="image/x-icon">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
