Arreglando detalles para el sprint 2.

--- a/tallerwebi-base/src/main/webapp/WEB-INF/views/thymeleaf/home.html
+++ b/tallerwebi-base/src/main/webapp/WEB-INF/views/thymeleaf/home.html
@@ -81,7 +81,7 @@
     </section>
     <aside class="columnaTres">
         <div class="estructura">
-            <h2>Aumnos cursando...</h2>
+            <h2>Alumnos cursando...</h2>
             <p>Ingeniería en Sistemas</p>
             <div class="recomendaciones_users" >
                 <img class="user2" th:src="@{/imagenes/user2.png}">
