notificaciones con websocket, aparecen en nav, cambie controladorMiPerfil para que maneje datos para actualizar, pero que luego guarde en entidad usuario, porque como la pagina entera maneja datos, todo se rompia si se manejaba entidad usuario

--- a/tallerwebi-base/src/main/webapp/WEB-INF/views/thymeleaf/home.html
+++ b/tallerwebi-base/src/main/webapp/WEB-INF/views/thymeleaf/home.html
@@ -94,7 +94,9 @@
     </aside>
 </main>
 <script type="module" th:src="@{/js/publicaciones.js}"></script>
+<script type="module" th:src="@{js/notificaciones.js}"></script>
 <script type="module" th:src="@{js/tema.js}"></script>
+
 </body>
 
 </html>
