--- a/tallerwebi-base/src/main/webapp/resources/core/css/home.css
+++ b/tallerwebi-base/src/main/webapp/resources/core/css/home.css
@@ -255,48 +255,58 @@ a {
     width: 24px;
     height: 24px;
 }
-/*
 
-*/
-/*pdf*//*
+/*********** notificaciones dropdown *//////////////
 
-*/
-/* Asegura que el contenedor del canvas no se expanda más del tamaño del padre *//*
 
-.archivo-pdf {
-    max-width: 100%;
-    margin-bottom: 15px;
+
+
+
+/******notificaciones , ver donde va ****/
+.badge {
+   background-color: var(--verde); /* Fondo verde */
+      color: var(--texto);            /* Texto claro/blanco */
+      border-radius: 50%;
+      padding: 4px 8px;
+      font-size: 0.8rem;
+      margin-left: 5px;
 }
 
-.archivo-pdf .acciones-archivo {
-    margin-bottom: 10px;
+.menu-notificaciones .dropdown {
+   position: absolute;
+       background-color: var(--background); /* Fondo oscuro */
+       border: 1px solid var(--borde);      /* Borde acorde */
+       width: 250px;
+       max-height: 300px;
+       overflow-y: auto;
+       box-shadow: 0 2px 6px rgba(0,0,0,0.6); /* Sombra más oscura */
+       z-index: 1000;
+       color: var(--verde); /* Texto verde */
 }
 
-.archivo-pdf canvas {
-    display: block;
-    width: 100% !important;
-    height: auto !important;
-    max-width: 100%;
-    border: 1px solid #ccc;
-    margin: 0 auto;
+.menu-notificaciones .dropdown ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
 }
 
-*/
-/* Contenedor con scroll si el PDF es muy largo *//*
+.menu-notificaciones .dropdown li {
+    padding: 8px 12px;
+    border-bottom: 1px solid #eee;
+    cursor: pointer;
+}
 
-.archivo-pdf .pdf-container {
-    max-height: 400px;
-    overflow-y: auto;
-    border: 1px solid #aaa;
-    padding: 5px;
+.menu-notificaciones .dropdown li.leida {
+    background-color: #2c2f30; /* un gris oscuro más claro */
+       color: var(--verde-2);
+}
+
+.menu-notificaciones .dropdown li:hover {
+  background-color: #3d3f40; /* u
 }
 
 
 
-*/
-
-
-/***/
 
 @keyframes fadeIn {
     from { opacity: 0; transform: translateY(-5px); }
