--- a/tallerwebi-base/src/main/webapp/WEB-INF/views/thymeleaf/templates/nav.html
+++ b/tallerwebi-base/src/main/webapp/WEB-INF/views/thymeleaf/templates/nav.html
@@ -11,7 +11,20 @@
             <li>
                 <button id="btn-tema" class="boton-tema"><img class="isologo" th:src="@{/imagenes/modo-oscuro.png}"></button>
             </li>
-            <li><a href="/spring/miPerfil">Notificaciones</a></li>
+            <!-- Notificaciones -->
+            <li class="menu-notificaciones">
+                <a href="#" id="btn-notificaciones" th:attr="data-user-id=${usuario.id}">
+                    Notificaciones
+                    <span th:if="${usuario.cantidadNotificaciones > 0}"
+                          class="badge"
+                          th:text="${usuario.cantidadNotificaciones}"></span>
+                </a>
+                <div id="dropdown-notificaciones" class="dropdown" style="display:none;">
+                    <ul id="listaNotificaciones"></ul>
+                </div>
+            </li>
+
+
             <li><a href="/spring/miPerfil">Mensajes</a></li>
             <li class="menu-perfil">
                 <a href="#" class="menu-titulo">Mi Perfil</a>
