--- a/tallerwebi-base/src/main/webapp/resources/core/css/perfil.css
+++ b/tallerwebi-base/src/main/webapp/resources/core/css/perfil.css
@@ -226,3 +226,46 @@
   }
 }
 
+
+/******notificaciones , ver donde va ****/
+.badge {
+   background-color: var(--verde); /* Fondo verde */
+      color: var(--texto);            /* Texto claro/blanco */
+      border-radius: 50%;
+      padding: 4px 8px;
+      font-size: 0.8rem;
+      margin-left: 5px;
+}
+
+.menu-notificaciones .dropdown {
+   position: absolute;
+       background-color: var(--background); /* Fondo oscuro */
+       border: 1px solid var(--borde);      /* Borde acorde */
+       width: 250px;
+       max-height: 300px;
+       overflow-y: auto;
+       box-shadow: 0 2px 6px rgba(0,0,0,0.6); /* Sombra más oscura */
+       z-index: 1000;
+       color: var(--verde); /* Texto verde */
+}
+
+.menu-notificaciones .dropdown ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.menu-notificaciones .dropdown li {
+    padding: 8px 12px;
+    border-bottom: 1px solid #eee;
+    cursor: pointer;
+}
+
+.menu-notificaciones .dropdown li.leida {
+    background-color: #2c2f30; /* un gris oscuro más claro */
+       color: var(--verde-2);
+}
+
+.menu-notificaciones .dropdown li:hover {
+  background-color: #3d3f40; /* u
+}
