se maneja es propio en dtoPublicacion para eliminacionde publi y de limita tambien a que no se pueda editar cuando vaya a un perfil que no es propio del usuario

--- a/tallerwebi-base/src/main/webapp/WEB-INF/views/thymeleaf/miPerfil.html
+++ b/tallerwebi-base/src/main/webapp/WEB-INF/views/thymeleaf/miPerfil.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" th:href="@{/css/variables.css}"/>
     <link rel="stylesheet" th:href="@{/css/base.css}"/>
     <link rel="stylesheet" th:href="@{/css/perfil.css}"/>
+    <link rel="stylesheet" th:href="@{/css/home.css}"/>
 
     <!--<link rel="stylesheet" href="../../../resources/core/css/variables.css"/>
     <link rel="stylesheet" href="../../../resources/core/css/base.css"/>
@@ -42,50 +43,64 @@
             <ul>
                 <li class="titulo" th:text="${usuario.carrera != null ? usuario.carrera.nombre : 'Sin carrera'}">Carrera</li>
             </ul>
-            <a th:href="@{/editar-informacion}">Editar Información</a>
+
         </div>
+        <!-- Mostrar solo si es el propio usuario -->
+        <div th:if="${esPropio}">
+            <a th:href="@{/editar-informacion}">Editar Información</a>
 
-        <!-- Pop-up para cambiar foto -->
-        <div id="popUp" class="popup">
-            <div class="popup-content">
-                <span class="popup-cerrar">&times;</span>
-                <h2>Cambiar Foto</h2>
+            <!-- Pop-up para cambiar foto -->
+            <div id="popUp" class="popup">
+                <div class="popup-content">
+                    <span class="popup-cerrar">&times;</span>
+                    <h2>Cambiar Foto</h2>
 
-                <!-- Form para cambiar foto -->
-                <form id="form-cambiar-foto" th:action="@{/miPerfil/foto}" method="post" enctype="multipart/form-data">
-                    <img id="foto-preview" class="foto-preview"
-                         th:src="@{${usuario.fotoPerfil != null ? '/' + usuario.fotoPerfil : '/imagenes/user.png'}}"
-                         alt="Foto de perfil">
-                    <div class="separador"></div>
-                    <div class="box_botones">
-                        <div class="box-item">
-                            <input class="input-oculto" type="file" name="fotoPerfil" accept="image/*" id="inputFoto">
-                            <img th:src="@{/imagenes/camara.png}" alt="Cambiar foto">
-                            <label for="inputFoto" class="label-texto">Cambiar foto</label>
+                    <!-- Form para cambiar foto -->
+                    <form id="form-cambiar-foto" th:action="@{/miPerfil/foto}" method="post" enctype="multipart/form-data">
+                        <img id="foto-preview" class="foto-preview"
+                             th:src="@{${usuario.fotoPerfil != null ? '/' + usuario.fotoPerfil : '/imagenes/user.png'}}"
+                             alt="Foto de perfil">
+                        <div class="separador"></div>
+                        <div class="box_botones">
+                            <div class="box-item">
+                                <input class="input-oculto" type="file" name="fotoPerfil" accept="image/*" id="inputFoto">
+                                <img th:src="@{/imagenes/camara.png}" alt="Cambiar foto">
+                                <label for="inputFoto" class="label-texto">Cambiar foto</label>
+                            </div>
+                            <div class="box-item">
+                                <button type="submit" class="botones_acciones">
+                                    <img th:src="@{/imagenes/publicar.png}" alt="Guardar foto">
+                                </button>
+                                <p class="label-texto">Guardar foto</p>
+                            </div>
                         </div>
+                    </form>
+
+                    <!-- Form separado para eliminar foto -->
+                    <form th:action="@{/miPerfil/eliminar-foto}" method="post" class="form-eliminar-foto">
                         <div class="box-item">
                             <button type="submit" class="botones_acciones">
-                                <img th:src="@{/imagenes/publicar.png}" alt="Guardar foto">
+                                <img th:src="@{/imagenes/eliminar.png}" alt="Eliminar foto">
                             </button>
-                            <p class="label-texto">Guardar foto</p>
+                            <p class="label-texto">Eliminar foto</p>
                         </div>
-                    </div>
-                </form>
-
-                <!-- Form separado para eliminar foto -->
-                <form th:action="@{/miPerfil/eliminar-foto}" method="post" class="form-eliminar-foto">
-                    <div class="box-item">
-                        <button type="submit" class="botones_acciones">
-                            <img th:src="@{/imagenes/eliminar.png}" alt="Eliminar foto">
-                        </button>
-                        <p class="label-texto">Eliminar foto</p>
-                    </div>
-                </form>
+                    </form>
+                </div>
             </div>
+        </div>
         </div>
     </aside>
 
-    <section class="estructura"></section>
+
+
+        <div id="contenedor-publicaciones">
+            <th:block th:each="dtopubli : ${publicaciones}">
+                <div th:replace="templates/divTarjetaPublicacion :: tarjetaPublicacion(${dtopubli}, ${usuario})"></div>
+            </th:block>
+        </div>
+
+
+
 </main>
 <!--<script type="module" src="../../../resources/core/js/foto-perfil.js"></script>-->
 <script type="module" th:src="@{js/foto-perfil.js}"></script>
@@ -93,6 +108,6 @@
 <script type="module" th:src="@{js/login.js}"></script>
 <script type="module" th:src="@{js/nav.js}"></script>
 <script type="module" th:src="@{js/notificaciones.js}"></script>
-
+<script type="module" th:src="@{js/publicaciones.js}"></script>
 </body>
 </html>
