--- a/tallerwebi-base/src/main/webapp/WEB-INF/views/thymeleaf/miPerfil.html
+++ b/tallerwebi-base/src/main/webapp/WEB-INF/views/thymeleaf/miPerfil.html
@@ -23,7 +23,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
 </head>
-<body>
+<body th:data-es-propio="${esPropio}">
 <header>
     <nav th:replace="templates/nav :: nav"></nav>
 </header>
@@ -42,11 +42,16 @@
             <h2 class="palabra" th:text="${usuario.apellido}"></h2>
             <ul>
                 <li class="titulo" th:text="${usuario.carrera != null ? usuario.carrera.nombre : 'Sin carrera'}">Carrera</li>
+
             </ul>
 
         </div>
         <!-- Mostrar solo si es el propio usuario -->
         <div th:if="${esPropio}">
+            <a th:href="@{/mis-likes.html}" class="btn-mis-likes">
+               Mis Likes
+            </a>
+            <hr>
             <a th:href="@{/editar-informacion}">Editar Información</a>
 
             <!-- Pop-up para cambiar foto -->
