--- a/tallerwebi-base/src/main/webapp/WEB-INF/views/thymeleaf/home.html
+++ b/tallerwebi-base/src/main/webapp/WEB-INF/views/thymeleaf/home.html
@@ -25,7 +25,7 @@
     <link rel="stylesheet" th:href="@{/css/home.css}"/>
 
 </head>
-<body th:data-es-propio="${esPropio}">
+<body>
 <header>
     <nav th:replace="templates/nav :: nav"></nav>
 </header>
