--- a/tallerwebi-base/src/main/webapp/resources/core/css/perfil.css
+++ b/tallerwebi-base/src/main/webapp/resources/core/css/perfil.css
@@ -1,4 +1,4 @@
-@import url ('variables.css');
+@import url('variables.css');
 
 .contenedor_box_general{
     display: grid;
@@ -8,7 +8,7 @@
     width: 100%;
 }
 .contenedor_box_general h1{
-    color: var(--text);
+    color: var(--texto);
 }
 .contenedor_usuario{
     display: flex;
@@ -155,7 +155,7 @@
 .box_campo{
     display: flex;
     flex-direction: column;
-    color: var(--text-ter);
+    color: var(--texto-ter);
     margin-bottom: 2rem;
     gap: 0.5rem;
     flex: 1 1 calc(33.333% - 1rem);
@@ -173,7 +173,7 @@
 
 .box_campo option {
   background-color: var(--background-contenedor);
-  color: var(--text);
+  color: var(--texto);
 }
 .contenedor_campos_btn{
     display: flex;
@@ -267,5 +267,5 @@
 }
 
 .menu-notificaciones .dropdown li:hover {
-  background-color: #3d3f40; /* u
+  background-color: #3d3f40; /* u*/
 }
