--- a/tallerwebi-base/src/main/webapp/WEB-INF/views/thymeleaf/home.html
+++ b/tallerwebi-base/src/main/webapp/WEB-INF/views/thymeleaf/home.html
@@ -107,7 +107,7 @@
     </aside>
 </main>
 <script type="module" th:src="@{/js/publicaciones.js}"></script>
-<script type="module" th:src="@{js/notificaciones.js}"></script>
+<script th:src="@{/js/notificaciones.js}"></script>
 <script type="module" th:src="@{js/tema.js}"></script>
 
 </body>
